<!--
  ~ Copyright (c) 2016. Mehdi Sohrabi
  -->

<resources>
    <string name="app_name">SinglePostViewLib</string>
    <string name="comment_hint">Add Comment</string>
    <string name="post_id_copy">Copy Post ID</string>
    <string name="user_id_copy">Copy User ID</string>
    <string name="text_copy">Copy text</string>
    <string name="delete">Delete</string>
    <string name="clip_comment_author">Comment Author ID Copied to clipboard</string>
    <string name="clip_comment_body">Comment Text Copied to clipboard</string>
    <string name="clip_post_author">Post Author ID Copied to clipboard</string>
    <string name="clip_post_id">Post ID Text Copied to clipboard</string>
    <string name="clip_post_body">Post Text Copied to clipboard</string>
    <string name="comment_tag_user_string">User</string>
    <string name="comment_tag_post_string">Post</string>
    <string name="comment_tag_shat_string">Tag</string>
    <string name="comment_tag_title">Insert Mention</string>
    <string name="comment_tag_hint">ID</string>
    <string name="ok">OK</string>
    <string name="reshare">%s ReShares</string>
    <string name="like">%s Likes</string>

    <!-- Transitions -->
    <string name="transition_user_name">transition:USER_NAME</string>
    <string name="transition_user_avatar">transition:USER_AVATAR</string>
    <string name="transition_post_date">transition:POST_DATE</string>
    <string name="transition_post_title">transition:POST_TITLE</string>
    <string name="transition_post_body">transition:POST_BODY</string>
    <string name="transition_post_more">transition:POST_MORE</string>
    <string name="transition_function_comment">transition:FUNCTION_COMMENT</string>
    <string name="transition_function_read">transition:FUNCTION_READ</string>
    <string name="transition_function_like">transition:FUNCTION_LIKE</string>
    <string name="transition_function_star">transition:FUNCTION_STAR</string>
    <string name="transition_function_share">transition:FUNCTION_SHARE</string>
    <string name="transition_function_all">transition:FUNCTION_ALL</string>
    <string name="transition_function_like_count">transition:FUNCTION_LIKE_COUNT</string>
    <string name="transition_function_share_count">transition:FUNCTION_SHARE_COUNT</string>
    <string name="transition_function_comment_count">transition:FUNCTION_COMMENT_COUNT</string>

</resources>
