<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016. Mehdi Sohrabi
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/standard_padding"
    >

    <RadioGroup
        android:id="@+id/comment_tag_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        >

        <RadioButton
            android:id="@+id/comment_tag_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/comment_tag_user_string"
            android:layout_weight="1"
            android:checked="true"
            />

        <RadioButton
            android:id="@+id/comment_tag_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/comment_tag_post_string"
            android:layout_weight="1"
            />

        <RadioButton
            android:id="@+id/comment_tag_hash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/comment_tag_shat_string"
            android:layout_weight="1"
            />
    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/standard_padding"
        >

        <com.mehdok.singlepostviewlib.views.PostEditText
            android:id="@+id/dialog_comment_et_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/mini_padding"
            />

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/dialog_comment_et_1_paste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_content_paste_grey600_24dp"
            android:background="@drawable/buttons_background"
            android:padding="@dimen/standard_padding"
            android:layout_marginRight="@dimen/mini_padding"
            />

    </LinearLayout>

</LinearLayout>